--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,25 +1,20 @@
-
 .hero-section {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 80px 20px;
-    color: #fff;
+    height: 789px;
     text-align: center;
-    background: url('/images/spray_image.svg') no-repeat 80% center / 100% auto;
-   
-}
-.hero-section::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, #1B5F8A 100%, #3584B6 10%);
-    opacity: 0.70; 
-    z-index: 0;
+
+    background-image: 
+        url('/images/spray_image.svg'), 
+        linear-gradient(to bottom, #1B5F8B 80%, #3584B6 100%);
+    background-position: 80% center, center;
+    background-repeat: no-repeat, no-repeat;
+    background-size: 100% auto, cover;
+
+    background-blend-mode: overlay; 
 }
 
 
@@ -55,12 +50,7 @@
     max-width: 600px;
 }
 
-.youtube-player {
-    width: 100%;
-    aspect-ratio: 16 / 9; 
-    max-width: 600px;
-    
-}
+
 
 .thumbnail {
     position: relative;
