--- a/styles/faq.css
+++ b/styles/faq.css
@@ -23,7 +23,7 @@
     padding: 1.5rem 4rem 1.5rem 1.5rem; 
     background-color: #f8f9fa;
     cursor: pointer;
-    font-weight: bold;
+    font-weight: 500;
     font-size: 1.1rem;
     list-style: none;
     position: relative;
@@ -80,6 +80,7 @@
     border-radius: 50px;
 
     font-size: 18px;
+    font-weight: 500;
     text-transform: uppercase;
     transition: background-color 0.3s ease;
 }
