--- a/styles/faq.css
+++ b/styles/faq.css
@@ -96,6 +96,21 @@
     height: auto;
 }
 
+.faq-header {
+    text-align: center;
+    margin-bottom: 10px; 
+}
+
+.faq-title {
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: 0;
+    color: #25A794;
+    text-align: center;
+}
+
 @media (max-width: 1024px) {
     .faq-item summary {
         padding: 1.5rem 3.5rem 1.5rem 1.5rem;
